# fluk

./: .pre-commit-config.yaml  pyproject.toml
src/fluk/: command.py
