[tool.poetry]
name = "fluk"
version = "0.0.1"
description = ""
authors = ["Bastian Hoyer <dafire@gmail.com>"]

[tool.poetry.scripts]
fluk = "fluk.command:cli"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
requests = "^2.28.0"
macos-keychain = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
